<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Tagarela</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_message">Olá, bem vindo ao Tagarela!</string>
    <string name="symbol_create"><u>Criar símbolo</u></string>
    <string name="game_play"><u>Jogar Plano</u></string>
    <string name="jogar">Escrever</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="title_activity_jogo">Jogo</string>
    <string name="title_activity_configuracoes">Configuracoes</string>
    <string name="title_activity_selecionar_tema">Selecionar Tema</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_selecionar_plano">Selecionar Plano</string>
    <string name="title_activity_editor_coordenadas">Editor de Coordenadas</string>
    <string name="title_activity_gerenciar_lista">GerenciarLista</string>
    <string name="link_video">Link para video</string>
    <string name="rec_sound">Gravar som</string>
    <string name="rec_stop">Parar</string>
    <string name="play_sound">Tocar</string>
    <string name="title_symbol_create" />
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_user_create">Informe os campos abaixo</string>
    <string name="symbol_image">Simbolo</string>
    <string name="image_meaning">Significado da imagem</string>
    <string name="view_symbols"><u>Visualizar símbolos</u></string>
    <string name="welcome_message">Bem vindo ao Tagarela</string>
    <string name="login_ask">Você já possui um usuário no Tagarela?</string>
    <string name="search_symbol">Procurar símbolo</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="title_activity_teste_jogo">TesteJogo</string>
    <string name="tagarela">Tagarela</string>
    <string name="user_image">Imagem do usuário</string>
    <string name="link_tagarela">http://gcg.inf.furb.br/?page_id=992</string>
    <string name="title">Titulo</string>
    <string name="layout_choose">Selecione o layout do plano</string>
    <string name="create_plan"><u>Criar plano</u></string>
    <string name="symbol_one">símbolo um</string>
    <string name="symbol_two">símbolo dois</string>
    <string name="symbol_three">símbolo três</string>
    <string name="symbol_four">símbolo quatro</string>
    <string name="symbol_five">símbolo cinco</string>
    <string name="symbol_six">símbolo seis</string>
    <string name="symbol_seven">símbolo sete</string>
    <string name="symbol_eight">símbolo oito</string>
    <string name="symbol_nine">símbolo nove</string>
    <string name="people">Pessoas</string>
    <string name="verb">Verbos</string>
    <string name="noun">Substantivos</string>
    <string name="patient">Paciente</string>
    <string name="especialist">Especialista</string>
    <string name="tutor">Tutor</string>
    <string name="add_plan">Adicionar plano</string>
    <string name="plan_name">Nome do plano</string>
    <string name="user_id">ID do usuário</string>
    <string name="plans">Planos</string>
    <string name="observations"><u>Observações</u></string>
    <string name="new_observation">Nova observação</string>
    <string name="observations_text">Observações</string>
    <string name="close">Fechar</string>
    <string name="symbol_historic"><u>Histórico de símbolos</u></string>
    <string name="invalid_information">Informações inválidas.</string>
    <string name="fill_data">É necessário preencher todos os campos.</string>
    <string name="user_data">Dados do usuário</string>
    <string name="choose_a_category">Selecione uma categoria</string>
    <string name="no_data_found">Não há itens para exibir.</string>
</resources>