<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/L05S00"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="180dp"
            android:contentDescription="@string/symbol_one"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/imagem" />

        <ImageView
            android:id="@+id/L05S01"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/symbol_two"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/imagem" />

        <ImageView
            android:id="@+id/L05S02"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/symbol_three"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/imagem" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/L05S03"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="180dp"
            android:contentDescription="@string/symbol_four"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/imagem" />

        <ImageView
            android:id="@+id/L05S04"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/symbol_five"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/imagem" />

        <ImageView
            android:id="@+id/L05S05"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/symbol_six"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/imagem" />

    </LinearLayout>

</LinearLayout>
