<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/imgSpecialist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/especialist"
        android:src="@drawable/especialista" />

    <ImageButton
        android:id="@+id/imgPatient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/patient"
        android:src="@drawable/paciente" />

    <ImageButton
        android:id="@+id/imgTutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tutor"
        android:src="@drawable/tutor" />

</LinearLayout>