<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/people_category"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/people"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/people" />

    <ImageView
        android:id="@+id/verb_category"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/verb"
        android:padding="10dp"
        android:src="@drawable/verb" />

    <ImageView
        android:id="@+id/nouns_category"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/noun"
        android:padding="10dp"
        android:src="@drawable/nouns" />

</LinearLayout>