<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PrincipalJogo" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="10dp" 
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.34" >

                <ImageView
                    android:id="@+id/userPhoto"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/user_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/user"/>

                <TextView
                    android:id="@+id/welcomeMessage"
                    android:layout_width="398dp"
                    android:layout_height="200dp"
                    android:paddingLeft="10dp"
                    android:text="@string/hello_message"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/link_color"
                    android:textSize="25sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.19"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tagarela"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/grey05"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/link_tagarela"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/grey05"
                    android:textSize="40sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ListView
                android:id="@+id/plan_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/title"
                android:divider="#DEDEDE"
                android:dividerHeight="1dp" >

            </ListView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="15" >

        <TextView
            android:id="@+id/createSymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:text="@string/symbol_create"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/view_symbols"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:text="@string/view_symbols"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/create_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:text="@string/create_plan"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/observations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:text="@string/observations"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_color"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/historics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:text="@string/symbol_historic"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link_color"
            android:textSize="22sp" />
        
    </LinearLayout>

</LinearLayout>