<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="10dp" >

    <ImageView
        android:id="@+id/symbol_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/symbol_image"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/user" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="174dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.73"
        android:orientation="vertical"
        android:paddingLeft="10dp" >

        <EditText
            android:id="@+id/image_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/image_meaning" />

        <EditText
            android:id="@+id/link_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/link_video" />

        <EditText
            android:id="@+id/symbol_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/sound_rec"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rec_sound"
                android:textColor="@color/link_color"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sound_play"
                android:layout_width="wrap_content"
                android:layout_height="39dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="20dp"
                android:text="@string/play_sound"
                android:textColor="@color/link_color"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>