<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/L02S00"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/symbol_one"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/imagem" />

    <ImageView
        android:id="@+id/L02S01"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/symbol_two"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/imagem" />

    <ImageView
        android:id="@+id/L02S02"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/symbol_three"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/imagem" />

</LinearLayout>